k8s/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lago-front
spec:
  selector: 
    matchLabels:
      app.kubernetes.io/name: lago-front
  template:
    metadata:
      labels:
        app.kubernetes.io/network: lago-default
        app.kubernetes.io/name: lago-front 
    spec:
      containers:
        - env:
            - name: API_URL
              valueFrom:
                configMapKeyRef:
                  name: lago-configmap
                  key: LAGO_API_URL
            - name: APP_ENV
              value: ${APP_ENV:-production}
            - name: CODEGEN_API
              value: http://localhost:3000
            - name: LAGO_DISABLE_SIGNUP
              value: ${LAGO_DISABLE_SIGNUP:-false}
            - name: LAGO_OAUTH_PROXY_URL
              value: https://proxy.getlago.com
            - name: SENTRY_DSN
              value: ${SENTRY_DSN_FRONT}
          image: "getlago/front:$IMAGE_VERSION"
          name: lago-front
          ports:
            - containerPort: 80
      restartPolicy: Always
